antifraud/src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antifraud-deployment
  labels:
    app: antifraud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: antifraud
  template:
    metadata:
      labels:
        app: antifraud
    spec:
      serviceAccountName: antifraud-sa
      containers:
        - name: antifraud
          image: iluhinzoh1/antifraud:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
