antifraud/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antifraud-service
spec:
  selector:
    app: antifraud
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
